--- a/client/src/pages/Home/сomponents/Nav/сomponents/FilterModal/filterModal.css
+++ b/client/src/pages/Home/сomponents/Nav/сomponents/FilterModal/filterModal.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .filterModal {
-    @apply w-full flex-col;
+    @apply w-full;
   }
   .filterModal__title {
     @apply lg:text-2xl text-green-600 text-center font-bold mt-12px;
@@ -13,6 +13,6 @@
     @apply flex justify-center font-bold text-sm lg:text-lg text-green-600;
   }
   .filterModal__filter {
-    @apply flex pl-4px mr-4px pr-4px pt-2px pb-2px dark:bg-black border-2 rounded-3xl;
+    @apply flex pl-2px mr-2px pr-4px pt-2px pb-2px dark:bg-black border-2 rounded-3xl;
   }
 }
